# ROSwave_cpp

./: .gitignore  CMakeLists.txt  COMPREHENSIVE_TEST.md  COMPREHENSIVE_TEST_REPORT.md  Dockerfile  ENHANCEMENT_ROADMAP.md  PHASE1_IMPLEMENTATION_REPORT.md  PHASE_COMPLETION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START_GUIDE.md  README.md  SESSION_COMPLETION_SUMMARY.md  WORLD_CLASS_FEATURES.md  demo_publisher.py  run_dashboard.sh  test_build.sh  test_discovery.sh
cmake/: FindQCustomPlot.cmake
config/: config.json
docs/: ADVANCED_FEATURES.md  ANALYTICS_DASHBOARD.md  API_INTEGRATION_GUIDE.md  BUILD.md  CONTEXT_MENUS_FEATURE.md  DEVELOPER.md  LOGGING.md  PLUGIN_ARCHITECTURE.md  PLUGIN_IMPLEMENTATION_SESSION.md  REST_WEBSOCKET_API.md  SELECTED_TOPICS_FEATURE.md  USER_MANUAL.md  WEB_DEPLOYMENT.md
include/: adaptive_cache_layer.hpp  advanced_chart_features.hpp  alert_manager.hpp  alert_manager_advanced.hpp  analytics_dashboard.hpp  async_worker.hpp  logging.hpp  metrics_collector.hpp  metrics_history_buffer.hpp  ml_exporter.hpp  network_manager.hpp  performance_optimizations.hpp  plugin_interface.hpp  plugin_loader.hpp  plugin_registry.hpp  process_guard.hpp  ros2_manager.hpp  ros2_metrics_collector.hpp  session_manager.hpp  topic_monitor.hpp
include/containers/: bounded_deque.hpp  cache_with_timeout.hpp  resource_pool.hpp  thread_safe_queue.hpp
include/gui/: advanced_chart_widget.hpp  advanced_filter.hpp  context_menus.hpp  export_tab.hpp  main_window.hpp  message_inspector_tab.hpp  metrics_tab.hpp  network_tab.hpp  nodes_tab.hpp  recording_tab.hpp  selected_topics_tab.hpp  services_tab.hpp  settings_dialog.hpp  topic_dependency_graph.hpp  topics_tab.hpp  ui_improvements.hpp  upload_tab.hpp
include/server/: api_routes.hpp  rest_api_server.hpp  websocket_server.hpp
src/: advanced_chart_features.cpp  alert_manager.cpp  alert_manager_advanced.cpp  analytics_dashboard.cpp  async_worker.cpp  keyboard_shortcuts_manager.cpp  logging.cpp  main.cpp  metrics_collector.cpp  metrics_history_buffer.cpp  ml_exporter.cpp  network_manager.cpp  plugin_loader.cpp  plugin_registry.cpp  process_guard.cpp  ros2_manager.cpp  ros2_metrics_collector.cpp  session_manager.cpp  topic_monitor.cpp
src/gui/: advanced_chart_widget.cpp  advanced_filter.cpp  context_menus.cpp  export_tab.cpp  main_window.cpp  message_inspector_tab.cpp  metrics_tab.cpp  network_tab.cpp  nodes_tab.cpp  recording_tab.cpp  selected_topics_tab.cpp  services_tab.cpp  settings_dialog.cpp  topic_dependency_graph.cpp  topics_tab.cpp  upload_tab.cpp
src/plugins/: custom_visualizer_plugin.cpp  custom_visualizer_plugin.hpp
src/server/: api_routes.cpp  rest_api_server.cpp  upload_server.cpp  websocket_server.cpp
src/tools/: verify_performance.cpp
tests/: test_advanced_features.cpp  test_all_features.cpp  test_all_features_binary  test_containers.cpp  test_context_menus.cpp  test_context_menus_standalone.cpp  test_features.py  test_logging.cpp
web/: dashboard.js  index.html  styles.css
